Categories alignment fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2581,7 +2581,7 @@ input, select, textarea {
 		-ms-flex-wrap: wrap;
 		flex-wrap: wrap;
 		position: relative;
-		margin: 0 0 -2.5em 0;
+		padding: 0 0 1em 0;
 	}
 
 		#categories a {
@@ -2808,9 +2808,9 @@ input, select, textarea {
 				opacity: 1;
 			}
 
-		* + .tiles {
+		/** + .tiles {
 			margin-top: 2em;
-		}
+		}*/
 
 		body.is-preload .tiles article {
 			-moz-transform: scale(0.9);
